--- a/index.html
+++ b/index.html
@@ -119,15 +119,19 @@
 					<p>
 						the second step is to solve the entire first layer. we continue on the side we did the cross on, if you solved the white cross, you now are solving
 						the rest of the white pieces to solve the first layer.<br/>
-						first, look for any white corner piece in the top layer (any corner with white on it), and identify where that piece belongs. if its the
-						Red/White/Blue piece, it belongs in the corner that connect the Red, White, and Blue layers.<br/>
+						first, look for any white corner piece in the top layer (any corner with white on it).<br/><br/>
+						<img class="imageDiv3" src="./assets/first-layer1.jpg" width="200" alt=""><br/>
+						identify where that piece belongs. if its the Orange/White/Blue piece, it belongs in the corner that connect the Orange, White, and Blue layers.<br/>
 						next, position the cube so that the corner is on top of its correct position, and hold the cube with the white face down, and the corner you want to solve
-						on the right (as shown in picture).<br/>
+						on the right (as shown in picture).<br/><br/>
+						<img class="imageDiv3" src="./assets/first-layer2.jpg" width="200" alt=""><br/>
 						perform the following algorithm.<br/>
 						&emsp; <strong>R U R' U'.</strong><br/>
-						repeat this algorithm as many times as needed until that piece is solved!<br/>
+						repeat this algorithm as many times as needed until that piece is solved!<br/><br/>
+						<img class="imageDiv3" src="./assets/first-layer3.jpg" width="200" alt=""><br/>
 						continue this process until there are no white corners in the up face... but you may not be done yet!<br/>
-						you may encounter a situation where you already have a white corner in the white layer, but it isnt in its correct position or orientation, as shown here.<br/>
+						you may encounter a situation where you already have a white corner in the white layer, but it isnt in its correct position or orientation, as shown here.<br/><br/>
+						<img class="imageDiv3" src="./assets/first-layer4.jpg" width="200" alt=""><br/>
 						to fix this, simply perfrom that same algorithm (R U R' U') once, to move that piece to the up layer, then solve it like you learned earlier.<br/>
 						if you have completed this step correctly, you will have solved the first layer!
 					</p>
@@ -156,6 +160,74 @@
 						to fix this, move any other edge in the top layer into that piece, the same you would solve it normally, in order to move the edge to the top. then, you can
 						solve that edge as learned.<br/>
 						if done correctly, you will have solved the 2nd layer!!
+					</p>
+				</div>
+				<div class="accent3-1">
+					<h3>step 4</h3>
+				</div>
+				<div class="accent3-2">
+					<p>
+						the fourth step is to begin solving a cross on the yellow side (or up face). here, we will orient all of the yellow edges, or in other words,
+						get yellow facing up on each of the edge pieces.<br/>
+						there are 4 possible cases you can get, but you only need 1 algorithm to be able to do all them.<br/>
+						here is the algorith:
+						&emsp; <strong>F R U R' U' F'.</strong> this is very similar to the first algorithm you learned, but, you add an F move at the start, and an F' move at the end<br/>
+						here are the 4 possible cases:<br/>
+						this here is a line case. hold the cube as shown in the picture (with the line going across horizontally), then hold the cube with white facing down, and perfrom
+						the algorithm.<br/>
+						this is the L case. hold the cube as shown in the picture )with the L shape at the back+left of the cube, then hold the cube with white facing down, and perform
+						the algorithm.<br/>
+						this here is a dot case. doesnt matter how you hold the cube, as long as white is facing down. perform the algorithm TWICE.<br/>
+						the 4th case you get is the solved case, in which case, you can skip this step. this is what it looks like:<br/>
+						once you have done this, you may move onto the next step!
+					</p>
+				</div>
+				<div class="accent3-1">
+					<h3>step 5</h3>
+				</div>
+				<div class="accent3-2">
+					<p>
+						the fifth step is a continuation from step 4. in step 4 we oriented all of the yellow edges, now we will position them correctly, so that edge edge lines up with
+						its' correct centre.<br/>
+						the first part of this step is to find 2 edges that line correctly, it will like similar to this:<br/><br/>
+						turn the top layer until you get this. if you don't get it anywhere, thats ok too, it just means this step will take a little longer.
+						hold the 2 solved edges at the back, and white on the bottom, like this:<br/>
+						and perform the following algorith:<br/>
+						&emsp; <strong>R U R' U R U2 R'.</strong> this may take a little practice to get right, but follow the video below and you will pick it up in no time!<br/>
+						one you have done this algorithm, check if you get all 4 yellow edges solved. if you do not, simply start this step again, and then it will be solved.<br/>
+					</p>
+				</div>
+				<div class="accent3-1">
+					<h3>step 6</h3>
+				</div>
+				<div class="accent3-2">
+					<p>
+						the sixth step is now positioning the corners in the last layer. we have solved the edges, just the corner left.<br/>
+						check each corner to see if it is in the right position. you will know its right if the colours on the piece match up with the 3 colours around it.<br/>
+						it will look like this:<br/>
+						you can either have 0 correctly positioned corners, 1, or 4. if its 4 you can skip this step.<br/>
+						if you have 1 corner in the right spot, hold the cube so that it is on the front/right, and with white on the bottom, like this:<br/><br/>
+						perform the following algorithm:<br/>
+						&emsp; <strong>U R U' L' U R' U' L.</strong> this may take a while to learn, but youll get there! i believe in you.<br/>
+						you may need to repeat this a number of times before each corner is correctly positioned.<br/>
+						if you had 0 corners in the correct spot, like this:<br/>
+						simply perform the algorithm anyway, and continue from there.<br/>
+						you are so close now!
+					</p>
+				</div>
+				<div class="accent3-1">
+					<h3>step 7</h3>
+				</div>
+				<div class="accent3-2">
+					<p>
+						the seventh and final step will flip the last corners and solve the cube.<br/>
+						we have had white on the bottom for most of the solve, but here we flip it, so yellow is now on the bottom, like this:<br/>
+						all you need is one algorithm, the one you learned at the start of the solve (R U R' U'), but you have to be careful...<br/>
+						hold the cube so that an unsolved corner is on the bottom right, here:<br/>
+						peform the algorithm until it is correctly placed, but ignore the other layers. you only care about that one piece.<br/>
+						once it is in the right spot, turn ONLY the bottom (or D) layer until another unsolved piece is in that spot. then repeat that earlier step.<br/>
+						remember, you have to turn ONLY the bottom layer. if you rotate the whole cube, this will not work.<br/>
+						once the remaining pieces have been correctly solved, you should have a completely solved rubik's cube. if you did this right, then congratulations, you earned it<br/>
 					</p>
 				</div>
 			</div>
