--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<img class="floatLeft imageDiv1" src="./assets/corner-piece.jpg" width="150" alt="cornerPiece">
 					<img class="floatLeft imageDiv1" src="./assets/cube-corners.jpg" width="200" alt="cubeCorners">
 						<p>the cube has 8 corner pieces. they each have 3 stickers on them. corner pieces MUST stay in the corners, it is phsyically
-						impossible for a corner piece to move to an edge or centre, and there is only 1 of each corner piece.<br/><br/>
+						impossible for a corner piece to move to an edge or centre, and there is only 1 of each corner piece.
 						remember, you are solving pieces, NOT stickers.
 						</p>
 				</div>
@@ -126,12 +126,13 @@
 						on the right (as shown in picture).<br/><br/>
 						<img class="imageDiv3" src="./assets/first-layer2.jpg" width="200" alt=""><br/>
 						perform the following algorithm.<br/>
-						&emsp; <strong>R U R' U'.</strong><br/>
+						&emsp; <strong>R U R' U'.</strong><br/><br/>
+						<img class="imageDiv3" src="./assets/first-layer-gif1.gif" width="200" alt=""><br/>
 						repeat this algorithm as many times as needed until that piece is solved!<br/><br/>
-						<img class="imageDiv3" src="./assets/first-layer3.jpg" width="200" alt=""><br/>
+						<img class="imageDiv3" src="./assets/first-layer-gif2.gif" width="200" alt=""><br/>
 						continue this process until there are no white corners in the up face... but you may not be done yet!<br/>
 						you may encounter a situation where you already have a white corner in the white layer, but it isnt in its correct position or orientation, as shown here.<br/><br/>
-						<img class="imageDiv3" src="./assets/first-layer4.jpg" width="200" alt=""><br/>
+						<img class="imageDiv3" src="./assets/first-layer3.jpg" width="200" alt=""><br/>
 						to fix this, simply perfrom that same algorithm (R U R' U') once, to move that piece to the up layer, then solve it like you learned earlier.<br/>
 						if you have completed this step correctly, you will have solved the first layer!
 					</p>
