--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			</header>
 		</article>
 		<div class="grid-container">
-	  		<div class="title accentTitle"><h1>how to solve a rubiks cube</h1></div>
+	  		<div class="title accentTitle"><h1>how to solve a rubik's cube</h1></div>
 	  		<div class="div1"><h2 class=accent1>how the cube works</h2><br/>
 				<div class="accent1-1 content">
 					<img class="floatLeft imageDiv1" src="./assets/cube-original.jpg" width="200" alt="cubeOriginal">
@@ -144,22 +144,27 @@
 					<p>
 						the third step is to solve the entire second layer.<br/>
 						first, look for any edge pieces that do not have YELLOW on them (if you chose to start on a different colour, you look for any edges
-						that do not have the UP face colour on it... remember, hold the face you solved the cross on at the bottom.), then, move that piece so that the sticker
-						on the front of the piece (not the one on the yellow face) matches up with the centre for that colour.<br/>
+						that do not have the UP face colour on it... remember, hold the face you solved the cross on at the bottom.).<br/><br/>
+						<img class="imageDiv3" src="./assets/second-layer1.jpg" width="200" alt=""><br/>
+						then, move that piece so that the sticker on the front of the piece (not the one on the yellow face) matches up with the centre for that colour.<br/><br/>
+						<img class="imageDiv3" src="./assets/second-layer2.jpg" width="200" alt=""><br/>
 						this is a bit complicated, so please refer to the images and gifs provdided here to simplify this as much as possible.<br/>
-						identify where that piece has to go. if it has to go to the right, you move the piece to the left.<br/>
-						perform the following algorithm:<br/>
-						&emsp; <strong>L' U' L U,</strong> then rotate the whole cube so that the corner is on the right now. then <strong>R U R' U'.</strong><br/>
-						together, thats L' U' L U rotate R U R' U'.<br/>
-						the L algorithm here is identical to the first one you learned, except you are using your left hand now, instead of your right.<br/>
-						if the edge instead has to go the left, you move the piece to the right.<br/>
-						perform the following algorithm:<br/>
-						&emsp; <strong>R U R' U',</strong> then rotate the whole cube so that the corner is on the left now. then <strong>L' U' L U.</strong><br/>
-						this is the same algorithm as before, just in the other order.<br/>
-						repeat this step until there are no non-yellow pieces in the top layer... but again, you might not be done yet!
-						you have a situation where you have an edge in the right spot, just around the wrong way... or, in the right layer, but in the wrong position.<br/>
-						to fix this, move any other edge in the top layer into that piece, the same you would solve it normally, in order to move the edge to the top. then, you can
-						solve that edge as learned.<br/>
+						identify where that piece has to go.<br/>
+						if it has to go to the right, you move the piece to the left, then, perform the following algorithm:<br/>
+						&emsp; <strong>R U R' U',</strong> rotate the whole cube so that the corner is on the left now. then <strong>L' U' L U.</strong><br/><br/>
+						<img class="imageDiv3" src="./assets/second-layer-gif1.gif" width="200" alt=""><br/>
+						together, thats R U R' U' rotate L' U' L U.<br/>
+						the L algorithm here is identical to the first one you learned, except you are using your left hand now, instead of your right.<br/><br/>
+						if the edge instead has to go the left, you move the piece to the right, then, perform the following algorithm:<br/>
+						&emsp; <strong>L' U' L U,</strong> rotate the whole cube so that the corner is on the right now. then <strong>R U R' U'.</strong><br/><br/>
+						<img class="imageDiv3" src="./assets/second-layer-gif2.gif" width="200" alt=""><br/>
+						this is the same algorithm as before, just in the other order. L' U' L U rotate R U R' U'.<br/>
+						repeat this step until there are no non-yellow pieces in the top layer... but again, you might not be done yet!<br/>
+						you may have a situation where you have an edge in the right spot, just around the wrong way... or, in the right layer, but in the wrong position.<br/><br/>
+						<img class="imageDiv3" src="./assets/second-layer3.jpg" width="200" alt=""><br/>
+						to fix this, move any other edge in the top layer into that piece, the same you would normally, in order to move the edge to the top.<br/><br/>
+						<img class="imageDiv3" src="./assets/second-layer-gif3.gif" width="200" alt=""><br/>
+						then, you can solve that edge as learned.<br/>
 						if done correctly, you will have solved the 2nd layer!!
 					</p>
 				</div>
@@ -171,15 +176,15 @@
 						the fourth step is to begin solving a cross on the yellow side (or up face). here, we will orient all of the yellow edges, or in other words,
 						get yellow facing up on each of the edge pieces.<br/>
 						there are 4 possible cases you can get, but you only need 1 algorithm to be able to do all them.<br/>
-						here is the algorith:
+						here is the algorithm:
 						&emsp; <strong>F R U R' U' F'.</strong> this is very similar to the first algorithm you learned, but, you add an F move at the start, and an F' move at the end<br/>
 						here are the 4 possible cases:<br/>
 						this here is a line case. hold the cube as shown in the picture (with the line going across horizontally), then hold the cube with white facing down, and perfrom
 						the algorithm.<br/>
 						this is the L case. hold the cube as shown in the picture )with the L shape at the back+left of the cube, then hold the cube with white facing down, and perform
-						the algorithm.<br/>
-						this here is a dot case. doesnt matter how you hold the cube, as long as white is facing down. perform the algorithm TWICE.<br/>
-						the 4th case you get is the solved case, in which case, you can skip this step. this is what it looks like:<br/>
+						the algorithm. you will end up with the line case.<br/>
+						this here is a dot case. doesnt matter how you hold the cube, as long as white is facing down. perform the algorithm. you will end up with the L case<br/>
+						the 4th case you get is the solved case, which mean you can move on. this is what it looks like:<br/>
 						once you have done this, you may move onto the next step!
 					</p>
 				</div>
