--- a/index.html
+++ b/index.html
@@ -174,17 +174,23 @@
 				<div class="accent3-2">
 					<p>
 						the fourth step is to begin solving a cross on the yellow side (or up face). here, we will orient all of the yellow edges, or in other words,
-						get yellow facing up on each of the edge pieces.<br/>
+						get yellow facing up on each of the edge pieces. remember, the corners do not matter in this step.<br/>
 						there are 4 possible cases you can get, but you only need 1 algorithm to be able to do all them.<br/>
-						here is the algorithm:
-						&emsp; <strong>F R U R' U' F'.</strong> this is very similar to the first algorithm you learned, but, you add an F move at the start, and an F' move at the end<br/>
+						here is the algorithm:<br/>
+						&emsp; <strong>F R U R' U' F'.</strong><br/><br/>
+						<img class="imageDiv3" src="./assets/step4-gif.gif" width="200" alt=""><br/>
+						this is very similar to the first algorithm you learned, but, you add an F move at the start, and an F' move at the end<br/><br/>
 						here are the 4 possible cases:<br/>
-						this here is a line case. hold the cube as shown in the picture (with the line going across horizontally), then hold the cube with white facing down, and perfrom
-						the algorithm.<br/>
-						this is the L case. hold the cube as shown in the picture )with the L shape at the back+left of the cube, then hold the cube with white facing down, and perform
-						the algorithm. you will end up with the line case.<br/>
-						this here is a dot case. doesnt matter how you hold the cube, as long as white is facing down. perform the algorithm. you will end up with the L case<br/>
-						the 4th case you get is the solved case, which mean you can move on. this is what it looks like:<br/>
+						this here is a line case. hold the cube as shown in the picture (with the line going across horizontally), then hold the cube with white facing down, and perform
+						the algorithm.<br/><br/>
+						<img class="imageDiv3" src="./assets/step4-1.jpg" width="200" alt=""><br/>
+						this is the L case. hold the cube as shown in the picture (with the L shape at the back+left of the cube), then hold the cube with white facing down, and perform
+						the algorithm. you will end up with the line case.<br/><br/>
+						<img class="imageDiv3" src="./assets/step4-2.jpg" width="200" alt=""><br/>
+						this here is a dot case. doesnt matter how you hold the cube, as long as white is facing down. perform the algorithm. you will end up with the L case<br/><br/>
+						<img class="imageDiv3" src="./assets/step4-3.jpg" width="200" alt=""><br/>
+						the 4th case you get is the solved case, which mean you can move on. this is what it looks like:<br/><br/>
+						<img class="imageDiv3" src="./assets/step4-4.jpg" width="200" alt=""><br/>
 						once you have done this, you may move onto the next step!
 					</p>
 				</div>
