--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="div2"><h2 class=accent2>types of moves</h2><br/>
 				<div class="accent2-1 content">
 					<img class="floatLeft imageDiv2" src="./assets/r.gif" width="200" alt="R">
-						<p style="margin-top: 80px;">
+						<p style="margin-top: 55px;">
 							this is the <strong>R</strong> layer. it is the right face of the cube. <br/>
 							note, the orientation of the cube does not matter.. whichever side is on the right is the R face.
 						</p>
@@ -202,11 +202,17 @@
 						the fifth step is a continuation from step 4. in step 4 we oriented all of the yellow edges, now we will position them correctly, so that edge edge lines up with
 						its' correct centre.<br/>
 						the first part of this step is to find 2 edges that line correctly, it will like similar to this:<br/><br/>
-						turn the top layer until you get this. if you don't get it anywhere, thats ok too, it just means this step will take a little longer.
-						hold the 2 solved edges at the back, and white on the bottom, like this:<br/>
-						and perform the following algorith:<br/>
-						&emsp; <strong>R U R' U R U2 R'.</strong> this may take a little practice to get right, but follow the video below and you will pick it up in no time!<br/>
-						one you have done this algorithm, check if you get all 4 yellow edges solved. if you do not, simply start this step again, and then it will be solved.<br/>
+						<img class="imageDiv3" src="./assets/step5-1.jpg" width="200" alt=""><br/>
+						turn the top layer until you get this. if you don't get it after 4 rotations, thats ok too, it just means this step will take a little longer.<br/>
+						hold the 2 solved edges at the back and right, and white on the bottom, as shown, and perform the following algorithm:<br/>
+						&emsp; <strong>R U R' U R U2 R'.</strong>you may need to adjust the top layer after this to get the edges to line up<br/>
+						<img class="imageDiv3" src="./assets/step5-gif1.gif" width="200" alt=""><br/>
+						this may take a little practice to get right, but follow the video above and you will pick it up in no time!<br/>
+						one you have done this algorithm, check if you get all 4 yellow edges solved. if you do not, simply redo this step.<br/>
+						if you had the other 2 edges solved, where they are opposite each other instead of next to each other, like this:<br/><br/>
+						<img class="imageDiv3" src="./assets/step5-gif2.gif" width="200" alt=""><br/>
+						just perform the algorithm anyway, and you will end up with 2 edges correct. you can then start this step again and you should have a completed yellow cross!.<br/><br/>
+						<img class="imageDiv3" src="./assets/step5-gif3.gif" width="200" alt=""><br/>
 					</p>
 				</div>
 				<div class="accent3-1">
