--- a/index.html
+++ b/index.html
@@ -45,38 +45,38 @@
 			</div>
 			<div class="div2"><h2 class=accent2>types of moves</h2><br/>
 				<div class="accent2-1 content">
-					<img class="floatLeft imageDiv2" src="./assets/r.gif" width="200" alt="R">
+					<img class="floatLeft imageDiv2" src="./assets/move-r.gif" width="200" alt="R">
 						<p style="margin-top: 55px;">
 							this is the <strong>R</strong> layer. it is the right face of the cube. <br/>
 							note, the orientation of the cube does not matter.. whichever side is on the right is the R face.
 						</p>
 				</div>
 				<div class="accent2-1 content">
-					<img class="floatLeft imageDiv2" src="./assets/u.gif" width="200" alt="U">
+					<img class="floatLeft imageDiv2" src="./assets/move-u.gif" width="200" alt="U">
 						<p style="margin-top: 92px;">
 							this is the <strong>U</strong> layer. it is the up face of the cube.
 						</p>
 				</div>
 				<div class="accent2-1 content">
-					<img class="floatLeft imageDiv2" src="./assets/l.gif" width="200" alt="L">
+					<img class="floatLeft imageDiv2" src="./assets/move-l.gif" width="200" alt="L">
 						<p style="margin-top: 92px;">
 							this is the <strong>L</strong> layer. it is the left face of the cube.
 						</p>
 				</div>
 				<div class="accent2-1 content">
-					<img class="floatLeft imageDiv2" src="./assets/d.gif" width="200" alt="D">
+					<img class="floatLeft imageDiv2" src="./assets/move-d.gif" width="200" alt="D">
 						<p style="margin-top: 92px;">
 							this is the <strong>D</strong> layer. it is the down face of the cube.
 						</p>
 				</div>
 				<div class="accent2-1 content">
-					<img class="floatLeft imageDiv2" src="./assets/f.gif" width="200" alt="F">
+					<img class="floatLeft imageDiv2" src="./assets/move-f.gif" width="200" alt="F">
 						<p style="margin-top: 92px;">
 							this is the <strong>F</strong> layer. it is the front face of the cube.
 						</p>
 				</div>
 				<div class="accent2-1 content">
-					<img class="floatLeft imageDiv2" src="./assets/b.gif" width="200" alt="B">
+					<img class="floatLeft imageDiv2" src="./assets/move-b.gif" width="200" alt="B">
 						<p style="margin-top: 92px;">
 							this is the <strong>B</strong> layer. it is the back face of the cube.
 						</p>
@@ -220,17 +220,21 @@
 				</div>
 				<div class="accent3-2">
 					<p>
-						the sixth step is now positioning the corners in the last layer. we have solved the edges, just the corner left.<br/>
+						the sixth step is now positioning the corners in the last layer. we have solved the edges, just the corners left.<br/>
 						check each corner to see if it is in the right position. you will know its right if the colours on the piece match up with the 3 colours around it.<br/>
 						it will look like this:<br/>
+						<img class="imageDiv3" src="./assets/step6-1.jpg" width="200" alt=""><br/>
 						you can either have 0 correctly positioned corners, 1, or 4. if its 4 you can skip this step.<br/>
 						if you have 1 corner in the right spot, hold the cube so that it is on the front/right, and with white on the bottom, like this:<br/><br/>
 						perform the following algorithm:<br/>
-						&emsp; <strong>U R U' L' U R' U' L.</strong> this may take a while to learn, but youll get there! i believe in you.<br/>
+						&emsp; <strong>U R U' L' U R' U' L.</strong> this may take a while to learn, but youll get there! i believe in you.<br/><br/>
+						<img class="imageDiv3" src="./assets/step6-gif1.gif" width="200" alt=""><br/>
 						you may need to repeat this a number of times before each corner is correctly positioned.<br/>
-						if you had 0 corners in the correct spot, like this:<br/>
+						if you had 0 corners in the correct spot, like this:<br/><br/>
+						<img class="imageDiv3" src="./assets/step6-gif2.gif" width="200" alt=""><br/>
 						simply perform the algorithm anyway, and continue from there.<br/>
-						you are so close now!
+						once you have all corners in the right spot, like this, you can move on. you are so close now!<br/><br/>
+						<img class="imageDiv3" src="./assets/step6-gif3.gif" width="200" alt=""><br/>
 					</p>
 				</div>
 				<div class="accent3-1">
