--- a/index.html
+++ b/index.html
@@ -243,19 +243,28 @@
 				<div class="accent3-2">
 					<p>
 						the seventh and final step will flip the last corners and solve the cube.<br/>
-						we have had white on the bottom for most of the solve, but here we flip it, so yellow is now on the bottom, like this:<br/>
-						all you need is one algorithm, the one you learned at the start of the solve (R U R' U'), but you have to be careful...<br/>
+						we have had white on the bottom for most of the solve, but here we flip it, so yellow is now on the bottom, like this:<br/><br/>
+						<img class="imageDiv3" src="./assets/step7-1.jpg" width="200" alt=""><br/>
+						all you need is one algorithm, the one you learnt during step 2 (R U R' U'), but you have to be careful... if you get this wrong, you will need to start again
+						from scratch!!<br/>
 						hold the cube so that an unsolved corner is on the bottom right, here:<br/>
-						peform the algorithm until it is correctly placed, but ignore the other layers. you only care about that one piece.<br/>
-						once it is in the right spot, turn ONLY the bottom (or D) layer until another unsolved piece is in that spot. then repeat that earlier step.<br/>
-						remember, you have to turn ONLY the bottom layer. if you rotate the whole cube, this will not work.<br/>
-						once the remaining pieces have been correctly solved, you should have a completely solved rubik's cube. if you did this right, then congratulations, you earned it<br/>
+						peform the algorithm until it is correctly placed, but ignore the other layers. you only care about that one piece.<br/><br/>
+						<img class="imageDiv3" src="./assets/step7-gif1.gif" width="200" alt=""><br/>
+						once it is in the right spot, turn ONLY the down (D) layer until another unsolved piece is in that spot. then repeat that earlier step.<br/><br/>
+						<img class="imageDiv3" src="./assets/step7-gif2.gif" width="200" alt=""><br/>
+						remember, you have to turn ONLY the bottom layer. if you rotate the whole cube instead, this will not work.<br/>
+						once the remaining pieces have been correctly solved, you should have a completely solved rubik's cube. if you did this right, then congratulations, you earned it!!<br/>
 					</p>
 				</div>
 			</div>
-	  		<div class="div4">How to cube</div>
-			<div class="div5">Pics and txt</div>
-	  		<div class="footer">Footer</div>
+	  		<div class="div4"></div>
+			<div class="div5"></div>
+	  		<div class="footer"></div>
+			<div class="accentFooter">
+				<p>this here is a video of me performing a solve.<br/><br/><br/>
+				</p>
+			</div>
+			<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/H1sBX_i-MHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</body>
 </html>
