--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
 					</p>
 				</div>
 			</div>
-	  		<div class="div4"></div>
-			<div class="div5"></div>
 	  		<div class="footer"></div>
 			<div class="accentFooter">
-				<p>this here is a video of me performing a solve.<br/><br/><br/>
+				<p>this here is a video of me performing a solve.
 				</p>
 			</div>
+			<div>
 			<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/H1sBX_i-MHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 		</div>
 	</body>
 </html>
