--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
 					</p>
 				</div>
 			</div>
-	  		<div class="footer"></div>
+	  		<div class="footer">
 			<div class="accentFooter">
-				<p>this here is a video of me performing a solve.
+				<p>this here is a video of me performing a solve.<br/><br/>
 				</p>
-			</div>
-			<div>
-			<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/H1sBX_i-MHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/H1sBX_i-MHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<br/><br/>
+				thankyou for visiting
 			</div>
 		</div>
 	</body>
