--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo%26display=swap">
     	<meta charset="utf-8">
     	<title>how to solve a rubik's cube</title>
+		<!-- i decided to do alot more than i probably should have. i hope you enjoy it tho, hopefully if you actually want to learn how to solve one of these, itl function nicely for you -->
 	</head>
 	<body>
 		<article class="accentHeader">
