--- a/index.html
+++ b/index.html
@@ -262,9 +262,10 @@
 			<div class="accentFooter">
 				<p>this here is a video of me performing a solve.<br/><br/>
 				</p>
-				<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/H1sBX_i-MHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/H1sBX_i-MHE" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br/><br/>
 				thankyou for visiting
+			</div>
 			</div>
 		</div>
 	</body>
