--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
+		<link rel="stylesheet" href="./css/main.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo%26display=swap">
 		<meta charset="utf-8">
 		<title>how to solve a rubik's cube</title>
 	</head>
 	<body>
 		<nav>
   			<ul>
-    			<li><a href="page2.html">Navigation</a></li>
-    			<li><a href="#">Menu</a></li>
-    			<li><a href="#">Links</a></li>
+				<li><a href="index.html">Title Page</a></li>
+    			<li><a href="page2.html">Beginner Method</a></li>
+    			<li><a href="#">Speedcubing</a></li>
+    			<li><a href="#">CFOP - Cross and F2L</a></li>
+				<li><a href="#">CFOP - OLL and PLL</a></li>
   			</ul>
 		</nav>
 	</body>
