--- a/page2.html
+++ b/page2.html
@@ -8,6 +8,15 @@
 		<!-- i decided to do alot more than i probably should have. i hope you enjoy it tho, hopefully if you actually want to learn how to solve one of these, itl function nicely for you -->
 	</head>
 	<body>
+		<nav>
+			<ul>
+				<li><a href="index.html">Title Page</a></li>
+    			<li><a href="page2.html">Beginner Method</a></li>
+    			<li><a href="#">Speedcubing</a></li>
+    			<li><a href="#">CFOP - Cross and F2L</a></li>
+				<li><a href="#">CFOP - OLL and PLL</a></li>
+			</ul>
+		</nav>
 		<article class="accentHeader">
 			<header>
 				<h5>a project by nuclearaven</h5>
