--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
 				<li><a href="#">CFOP - OLL and PLL</a></li>
   			</ul>
 		</nav>
+		<article class="accentHeader">
+			<header>
+				<h5>a project by nuclearaven</h5>
+			</header>
+		</article>
 	</body>
 </html>
