--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 	<body>
 		<nav>
   			<ul>
-				<li><a href="index.html">Title Page</a></li>
-    			<li><a href="page2.html">Beginner Method</a></li>
-    			<li><a href="#">Speedcubing</a></li>
+				<li><a href="index.html">title page</a></li>
+    			<li><a href="page2.html">beginner method</a></li>
+    			<li><a href="#">speedcubing</a></li>
     			<li><a href="#">CFOP - Cross and F2L</a></li>
 				<li><a href="#">CFOP - OLL and PLL</a></li>
   			</ul>
 		</nav>
+		<script src="main.js"></script>
+			<form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
+				Name: <input type="text" name="fname">
+				<input type="submit" value="Submit">
+			</form>
+		</script>
 		<article class="accentHeader">
 			<header>
 				<h5>a project by nuclearaven</h5>
