--- a/page2.html
+++ b/page2.html
@@ -10,9 +10,9 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="index.html">Title Page</a></li>
-    			<li><a href="page2.html">Beginner Method</a></li>
-    			<li><a href="#">Speedcubing</a></li>
+				<li><a href="index.html">title page</a></li>
+    			<li><a href="page2.html">beginner method</a></li>
+    			<li><a href="#">speedcubing</a></li>
     			<li><a href="#">CFOP - Cross and F2L</a></li>
 				<li><a href="#">CFOP - OLL and PLL</a></li>
 			</ul>
