--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>how to solve a rubik's cube</title>
 	</head>
 	<body>
-		<nav>
+		<div class="accentNav"><nav>
   			<ul>
 				<li><a href="index.html">title page</a></li>
     			<li><a href="page2.html">beginner method</a></li>
@@ -15,13 +15,10 @@
     			<li><a href="#">CFOP - Cross and F2L</a></li>
 				<li><a href="#">CFOP - OLL and PLL</a></li>
   			</ul>
-		</nav>
-		<script src="main.js"></script>
-			<form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
-				Name: <input type="text" name="fname">
-				<input type="submit" value="Submit">
-			</form>
-		</script>
+		</nav></div>
+		<div class="landingBox">
+			<div class="title accentTitle"><h1>how to solve a rubik's cube</h1></div>
+		</div>
 		<article class="accentHeader">
 			<header>
 				<h5>a project by nuclearaven</h5>
