--- a/page2.html
+++ b/page2.html
@@ -8,17 +8,17 @@
 		<!-- i decided to do alot more than i probably should have. i hope you enjoy it tho, hopefully if you actually want to learn how to solve one of these, itl function nicely for you -->
 	</head>
 	<body>
-		<nav>
-			<ul>
+		<div class="accentNav"><nav>
+  			<ul>
 				<li><a href="index.html">title page</a></li>
     			<li><a href="page2.html">beginner method</a></li>
     			<li><a href="#">speedcubing</a></li>
     			<li><a href="#">CFOP - Cross and F2L</a></li>
 				<li><a href="#">CFOP - OLL and PLL</a></li>
-			</ul>
-		</nav>
+  			</ul>
+		</nav></div>
 		<div class="grid-container">
-	  		<div class="title accentTitle"><h1>how to solve a rubik's cube</h1></div>
+	  		<div class="title accentTitle"><h1>beginner method</h1></div>
 	  		<div class="div1"><h2 class=accent1>how the cube works</h2><br/>
 				<div class="accent1-1 content">
 					<img class="floatLeft imageDiv1" src="./assets/cube-original.jpg" width="200" alt="cubeOriginal">
