--- a/page2.html
+++ b/page2.html
@@ -10,11 +10,11 @@
 	<body>
 		<div class="accentNav"><nav>
   			<ul>
-				<li><a href="index.html">title page</a></li>
-    			<li><a href="page2.html">beginner method</a></li>
-    			<li><a href="#">speedcubing</a></li>
-    			<li><a href="#">CFOP - Cross and F2L</a></li>
-				<li><a href="#">CFOP - OLL and PLL</a></li>
+				<a href="index.html">title page</a></li>
+    			<a href="page2.html">beginner method</a></li>
+    			<a href="#">speedcubing</a></li>
+    			<a href="#">CFOP - Cross and F2L</a></li>
+				<a href="#">CFOP - OLL and PLL</a></li>
   			</ul>
 		</nav></div>
 		<div class="grid-container">
