--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 	<body>
 		<div class="accentNav"><nav>
   			<ul>
-				<a href="index.html">title page</a></li>
-    			<a href="page2.html">beginner method</a></li>
-    			<a href="#">speedcubing</a></li>
-    			<a href="#">CFOP - Cross and F2L</a></li>
-				<a href="#">CFOP - OLL and PLL</a></li>
+				<a href="index.html">title page</a>
+    			<a href="page2.html">beginner method</a>
+    			<a href="page3.html">cross</a>
+    			<a href="page4.html">first 2 layers</a>
+				<a href="page5.html">the last layer</a>
   			</ul>
 		</nav></div>
-		<div class="landingBox">
+		<div class="grid-container">
 			<div class="title accentTitle"><h1>how to solve a rubik's cube</h1></div>
+			<div class="">
+				<script src="script.js" type="text/javascript">
+					<form name="help">
+						<input type="text" type="submit" name="1">
+						<input type="text" type="submit" name="2">
+					</form>
+				</script>
+			</div>
 		</div>
 		<article class="accentHeader">
 			<header>
