--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<div class="title accentTitle"><h1>how to solve a rubik's cube</h1></div>
 			<div class="div3">
 				<form name="help">
-					<input type="text" name="1" oninput="validation()">
-					<input type="text" name="2" oninput="validation()">
+					<input type="text" name="b1" oninput="validation()">
+					<input type="text" name="b2" oninput="validation()">
 					<input type="submit" id="submit" value="submit">
 				</form>
 			</div>
