--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo%26display=swap">
 		<meta charset="utf-8">
 		<title>how to solve a rubik's cube</title>
-		<script src="script.js" type="text/javascript"></script>
+		<script src="/js/script.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="accentNav"><nav>
