--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo%26display=swap">
 		<meta charset="utf-8">
 		<title>how to solve a rubik's cube</title>
-		<script src="/js/script.js" type="text/javascript"></script>
+		<script src="/js/script.js"></script>
 	</head>
 	<body>
 		<div class="accentNav"><nav>
   			<ul>
-				<a href="index.html">title page</a>
-    			<a href="page2.html">beginner method</a>
-    			<a href="page3.html">cross</a>
-    			<a href="page4.html">first 2 layers</a>
-				<a href="page5.html">the last layer</a>
+				<li><a href="index.html">title page</a></li>
+    			<li><a href="page2.html">beginner method</a></li>
+    			<li><a href="page3.html">cross</a></li>
+    			<li><a href="page4.html">first 2 layers</a></li>
+				<li><a href="page5.html">the last layer</a></li>
   			</ul>
 		</nav></div>
 		<div class="grid-container">
