--- a/page4.html
+++ b/page4.html
@@ -9,11 +9,11 @@
 	<body>
 		<div class="accentNav"><nav>
   			<ul>
-				<a href="index.html">title page</a>
-    			<a href="page2.html">beginner method</a>
-    			<a href="page3.html">cross</a>
-    			<a href="page4.html">first 2 layers</a>
-				<a href="page5.html">the last layer</a>
+				<li><a href="index.html">title page</a></li>
+    			<li><a href="page2.html">beginner method</a></li>
+    			<li><a href="page3.html">cross</a></li>
+    			<li><a href="page4.html">first 2 layers</a></li>
+				<li><a href="page5.html">the last layer</a></li>
   			</ul>
 		</nav></div>
 		<div class="grid-container">
